k8s/config/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector: 
    matchLabels:
      stack: todo
      app: api
  template:
    metadata:
      labels:
        stack: todo
        app: api
    spec:
      containers:
        - name: api
          image: veronezi/todo-api:0.0.1-b128
          ports:
            - containerPort: 8080
