k8s/config/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  replicas: 1
  selector: 
    matchLabels:
      stack: todo
      app: db
  template:
    metadata:
      labels:
        stack: todo
        app: db
    spec:
      containers:
        - name: db
          image: veronezi/sample-postgres:0.0.1-b21
          ports:
            - containerPort: 9000
