k8s/config/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
