k8s/config/facade-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: facade
spec:
  type: ClusterIP
  selector:
    app: facade
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
