k8s/config/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
