k8s/config/static-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static
spec:
  type: ClusterIP
  selector:
    app: static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
